[package]
name = "al-engine"
version = "0.1.0"
authors = ["Lucas Malandrino <lucas.malandrino@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
winit = "0.21.0"
vulkano = "0.17.0"
vulkano-win = "0.17.0"
log = "0.4.8"
simplelog = "0.7.4"
